# proc-macro-practice

./: main.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 05-method-chaining.rs  07-repeated-field.rs  progress.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: progress.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: progress.rs
