[package]
name = "derive_debug"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
# TODO
syn = { version = "1.0.27", features = ["extra-traits", "full"]}
quote = "1.0.6"
proc-macro2 = "1.0.17"
